--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.11",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.9",
     "react-dom": "^18.2.0",
+    "react-uuid": "^2.0.0",
     "remixicon": "^3.2.0",
     "remixicon-react": "^1.0.0"
   },
