--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.11",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
