--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.9",
